# 2501-OSX

./: .gitignore  .swiftlint.yml  CLAUDE.md  LICENSE  Makefile  README.md  crash.ips
.cursor/rules/: swift-build.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build-and-release.yml  build-unsigned.yml  ci.yml  push-signed-dmg.yml  sandbox-image.yml
App/osaurus.xcodeproj/: project.pbxproj
App/project2501/: Acknowledgements.json  Credits.rtf  Info.plist  osaurusApp.swift  project2501App.swift
App/project2501.xcodeproj/: project.pbxproj
App/project2501UITests/: osaurusUITestsLaunchTests.swift  project2501UITests.swift
Resources/vmlx_engine/: post_install_patches.py  pyproject.toml  requirements.txt
Resources/vmlx_engine/vmlx_engine/: cli.py
audit/: README.md
audit/api-endpoints/: README.md  engine-endpoints.md
audit/caching/: README.md
audit/configuration/: README.md
audit/engine-sync/: MAIN_BRANCH_DELTA.md  README.md
audit/error-handling/: README.md
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_TOOLS.md  FEATURES.md  FEATURE_COMPARISON.md  IDENTITY.md  MEMORY.md  OpenAI_API_GUIDE.md  PLUGIN_AUTHORING.md  REMOTE_MCP_PROVIDERS.md  REMOTE_PROVIDERS.md  SANDBOX.md  SECURITY.md  SHARED_CONFIGURATION_GUIDE.md  SKILLS.md  SUPPORT.md  THEMES.md  VMLX_ENGINE.md  VOICE_INPUT.md  WATCHERS.md  WORK.md
project2501.xcworkspace/: contents.xcworkspacedata
results/: osaurus-vs-ollama-lmstudio-batch.results.json  osaurus-vs-ollama-lmstudio-batch.summary.json
scripts/: build_local_dmg.sh
(+29 files in other folders)
