[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vmlx-engine"
version = "1.0.3"
description = "Apple Silicon MLX inference engine for Osaurus"
requires-python = ">=3.11"
# Dependencies installed separately via requirements.txt during provisioning

[project.scripts]
vmlx-engine = "vmlx_engine.cli:main"

[tool.setuptools.packages.find]
include = ["vmlx_engine*"]
